force-app/main/default/objects/Order_c__c/Order_c__c.object-meta.xml
<CustomObject>
    <label>Order__c</label>
    <nameField>
        <label>Order__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>