force-app/main/default/objects/Order_c__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer__c</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders__c</relationshipLabel>
    <relationshipName>Orders_c</relationshipName>
    <type>Lookup</type>
</CustomField>