force-app/main/default/objects/Order_c__c/fields/Menu_Item_c__c.field-meta.xml
<CustomField>
    <fullName>Menu_Item_c__c</fullName>
    <label>Menu_Item__c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Burger</fullName>
            </value>
            <value>
                <fullName>Pizza</fullName>
            </value>
            <value>
                <fullName>Pasta</fullName>
            </value>
            <value>
                <fullName>Salad</fullName>
            </value>
            <value>
                <fullName>Sandwich</fullName>
            </value>
            <value>
                <fullName>Sides</fullName>
            </value>
            <value>
                <fullName>Fries</fullName>
            </value>
            <value>
                <fullName>Onion Rings</fullName>
            </value>
            <value>
                <fullName>Garlic Bread</fullName>
            </value>
            <value>
                <fullName>Soup</fullName>
            </value>
            <value>
                <fullName>Soda</fullName>
            </value>
            <value>
                <fullName>Juice</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Tea</fullName>
            </value>
            <value>
                <fullName>Cake</fullName>
            </value>
            <value>
                <fullName>Ice Cream</fullName>
            </value>
            <value>
                <fullName>Brownie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>