force-app/main/default/objects/Order_c__c/fields/Order_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Order_Date_c__c</fullName>
    <label>Order_Date__c</label>
    <type>Date</type>
</CustomField>