force-app/main/default/objects/Order_c__c/fields/Total_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_c__c</fullName>
    <label>Total_Amount__c</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>