force-app/main/default/objects/Order_c__c/validationRules/Total_Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Amount_c__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Total_Amount_c__c</errorDisplayField>
    <errorMessage>The Total Amount must be greater than zero.</errorMessage>
</ValidationRule>